--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -4,6 +4,7 @@
     </h1>
     <div>
         <a href="/"> Weather</a>
+        <a href="/coronastatistics"> Corona stats</a>
         <a href="/about"> About</a>
         <a href="/help"> Help </a>
     </div>
