--- a/templates/views/coronastats.hbs
+++ b/templates/views/coronastats.hbs
@@ -22,11 +22,14 @@
             <button type="reset">Clear</button>
         </form>
         <div id="coronaPrecautions">
-            <br><br><br>
-            <p id="coronaMsg"></p>
-            <p id="cases">
-            </p>
-            <p id="deaths"></p>
+            <div class="darkText">
+                <br><br><br>
+                <p id="coronaMsg"></p>
+                <p id="cases">
+                </p>
+                <p id="deaths"></p>
+            </div>
+
         </div>
     </div>
     {{> footer}}
