--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,7 +75,11 @@ button {
   height: 50%;
   width: 50%;
 } */
-
+.darkText {
+  color: rgb(0, 0, 0);
+  /* background-color: #666; */
+  text-shadow: 0px -1px 0px rgba(255, 223, 223, 0.8);
+}
 .main {
   position: relative;
   flex-grow: 1;
@@ -101,9 +105,8 @@ button {
   height: 440px;
   padding: 20px 280px 20px 20px;
   margin: 0 auto;
-  color: black;
+  /* color: black; */
   /* background: #000; */
-  text-shadow: 0px -1px 0px rgba(255, 255, 255, 0.5);
 }
 #coronaPrecautions:before {
   content: "";
