--- a/templates/views/coronastats.hbs
+++ b/templates/views/coronastats.hbs
@@ -4,7 +4,7 @@
 <head>
     <title>Corona Virus Stats</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="icon" href="/img/weather.png">
+    <link rel="icon" href="/img/corona.png">
     </script>
 </head>
 
